rust-debuginfo/tests/snapshots/btreemap_simple@small.snap
---
source: rust-debuginfo/tests/mod.rs
expression: btreemap_simple
snapshot_kind: text
---
Ok(
    None,
)
