rust-debuginfo/tests/snapshots/btreemap_type@small.snap
---
source: rust-debuginfo/tests/mod.rs
expression: btreemap_type
snapshot_kind: text
---
Std(
    Map(
        MapDef {
            key_type: Std(
                String(
                    StringDef(
                        VecDef {
                            length_offset: 16,
                            data_ptr_offset: 8,
                            inner_type: Primitive(
                                UnsignedInt(
                                    UnsignedIntDef {
                                        size: 1,
                                    },
                                ),
                            ),
                        },
                    ),
                ),
            ),
            value_type: Primitive(
                Int(
                    IntDef {
                        size: 4,
                    },
                ),
            ),
            variant: BTreeMap {
                length_offset: 16,
                root_offset: 0,
            },
        },
    ),
)
