rust-debuginfo/tests/snapshots/enum_type_resolution-5.snap
---
source: rust-debuginfo/tests/mod.rs
expression: u8_enum_typedef
snapshot_kind: text
---
CEnum(
    CEnumDef {
        name: "U8Enum",
        discriminant_type: UnsignedInt(
            UnsignedIntDef {
                size: 1,
            },
        ),
        variants: [
            CEnumVariant {
                name: "First",
                value: 0,
            },
            CEnumVariant {
                name: "Second",
                value: 1,
            },
            CEnumVariant {
                name: "Third",
                value: 2,
            },
            CEnumVariant {
                name: "Fifth",
                value: 5,
            },
        ],
        size: 1,
    },
)
