rust-debuginfo/tests/snapshots/generated_benchmarks@large-3.snap
---
source: rust-debuginfo/tests/mod.rs
expression: "debug_info.resolve_function(\"TestStruct0::method_0\").unwrap().unwrap()"
snapshot_kind: text
---
ResolvedFunction {
    name: "large::TestStruct0::method_0",
    address: "0x100003310",
    params: [
        Variable {
            name: "self",
            value: None,
            ty: Some(
                Type {
                    name: "&TestStruct0",
                },
            ),
        },
        Variable {
            name: "param",
            value: None,
            ty: Some(
                Type {
                    name: "i32",
                },
            ),
        },
    ],
}
